fix hide arrows on firefox

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,9 +36,12 @@
     }
 
     /* Remove input number up/down arrows */
+    input[type=number].hide-arrows {
+        -moz-appearance: textfield;
+    }
     input[type='number'].hide-arrows::-webkit-inner-spin-button,
     input[type='number'].hide-arrows::-webkit-outer-spin-button {
         -webkit-appearance: none;
-        margin: 0;
+        @apply m-0;
     }
 }
